# mini-toolbox

./: .gitignore  pyproject.toml
projects/alarm_clock/: alarm_clock.py
projects/appimage_maker/: aim.py
projects/car_energy_consumption/: run.py
projects/chrome_app_mode/: app.py
projects/conflore/: README.md  changelog.md  pyproject.toml
projects/conflore/conflore/: conflore.py  main.py
projects/easy_submodule/: changelog.md  pyproject.toml
projects/easy_submodule/easy_submodule/: __init__.py  __main__.py  check.py  clone.py  deps_merge.py  lock.py  profile.py  pull.py
projects/easy_submodule/easy_submodule/api/: __init__.py  check.py  clone.py  lock.py  pull.py
projects/easy_submodule/easy_submodule/ui/: __init__.py  cache.py  launcher.py  ui_builder.py
projects/fake_typing/: changelog.md  pyproject.toml
projects/fake_typing/fake_typing/: __init__.py  const.py  fake.py  register.py
projects/file_renamer_pro/: rename.py  ui.py
projects/filediff/: filediff.py
projects/ipyshell/: ipyshell.py
projects/lkfmt/: pyproject.toml
projects/lkfmt/lkfmt/: __main__.py  lk_flavor.py  main.py
projects/local_chatapp/: app.py
projects/local_file_sync/: filesys.py  init.py  main.py
projects/localnet_chatapp/: app_pr.py  app_st.py
projects/markdown_image_base64/md_img_b64/: __main__.py
projects/markdown_image_cleaner/: __main__.py
projects/markdown_image_lofter/md_img_lofter/: __main__.py  main.py  text_scanner.py
projects/markdown_image_paste/img_paste_md/: main.py
projects/markdown_image_paste/img_paste_md/qml/: Main.qml
projects/markdown_image_paste/md_img_paste/: main.py
projects/markdown_image_paste/md_img_paste/qml/: Main.qml
projects/markdown_to_html_with_embedded_images/md_img_2_b64/: __init__.py  __main__.py  env.py
projects/markdown_to_html_with_embedded_images/md_img_2_b64/converter/: md_2_html.py
projects/markdown_to_html_with_embedded_images/styles/syntax_highlight/: adapter.py
projects/mklink_gui/: app.py  preset.yaml
projects/move_images_to_assets_folder/: main.py
projects/move_regex/: main.py
projects/new_file_in_finder/: new_file_in_finder.py
projects/ora_car_energy_statistics/: revision.py  ui.py  ui2.py
projects/poetry_enhancement/poetry_one_step/: main.py
projects/poetry_extensions/: check_dependencies.py  find_unused_dependencies.py  help_me_explain_poetry_error.py  init_template.py  pyproject.toml
projects/poetry_extensions/poetry_extensions/: init_template.py  requirements_lock.py  requirements_lock_2.py
projects/poetry_one_step/: main.py  poetry_init.py  poetry_one_step.py
projects/pyapp_window/: changelog.md  pyproject.toml
projects/pyapp_window/pyapp_window/: __init__.py  __main__.py  launcher.py  main.py  native_window.py  process.py  util.py
projects/pyapp_window/pyapp_window/webview_window/: __init__.py  api.py  common.py  toga_impl.py  util.py  webbrowser_impl.py  wx_impl.py
projects/pyapp_window/pyapp_window/webview_window/backend_implementations/: _base.py  chrome_appmode.py
projects/pyexecutor/: pyproject.toml
projects/pyexecutor/pyexecutor/: __main__.py  _bin.py  main.py
projects/pyexecutor/pyx/: _bin.py  main.py
projects/pyhotkey/: manifest.json  pyhotkey.py
projects/pyloader/: pyloader.py
projects/pypi_badge/: main.py
projects/pysignal/: changelog.md  pyproject.toml
projects/pysignal/pysignal/: __init__.py  pysignal.py
projects/pysignal/tests/: duplicate_locals.py
projects/python_code_compat_checker/: README.md  pyproject.toml  requirements.txt
projects/python_code_compat_checker/cases/: readme.md
projects/python_code_compat_checker/cases/tests_of_concept/: py310_new_typings.py
projects/python_code_compat_checker/compatipy/: __init__.py  __main__.py  main.py  play.py  type_annotations_checker.py
projects/readme_translator/: __main__.py
projects/remote_ipython/: pyproject.toml
projects/remote_ipython/remote_ipython/: __init__.py  __main__.py  debugger.py
projects/replace_pip_vendor_urllib3/: main.py
projects/rtmp_server/: server.py
projects/streamlit_sugar/: changelog.md  pyproject.toml
projects/streamlit_sugar/streamlit_sugar/: __init__.py  __main__.py  radio.py  runner.py
projects/streamlit_sugar/streamlit_sugar/components/: __init__.py  file_picker.py  radio.py  scope.py
projects/streamlit_theme_maker/: color_palette.py  readme.md
projects/streamlit_theme_maker/themes/detailed/: catppuccin-frappe.toml  catppuccin-latte.toml  catppuccin-macchiato.toml  catppuccin-mocha.toml
projects/streamlit_theme_maker/themes/simple/: catppuccin-frappe.toml  catppuccin-latte.toml  catppuccin-macchiato.toml  catppuccin-mocha.toml  dracula.toml
projects/table_utils/: pretty_xml.py  yaml_to_table.py
projects/timelapse/: pyproject.toml
projects/timelapse/timelapse/: __init__.py  fixture.py
projects/timetick/: pyproject.toml
projects/timetick/timetick/: __init__.py  fixture.py
projects/translate_readme/: main.py
projects/ubuntu_appimage_launcher/: ail.py
projects/watchpaths/: pyproject.toml
projects/watchpaths/watchpaths/: __init__.py  watcher.py
src/poetry_one_step/: poetry_one_step.py
