[tool.poetry]
name = "mini-toolbox"
version = "0.0.0"
description = ""
authors = ["Likianta <likianta@foxmail.com>"]
packages = [{include = "projects"}]

[tool.poetry.dependencies]
python = "^3.12"
argsense = { version = "^1.0.1b0", source = "likianta" }
cairosvg = "^2.7.1"
google-cloud-translate = "^3.19.0"
# hot-shelve = "^0.1.2"
# hyperdiv = "^0.1.8"
ipython = "^9.3.0"
lk-logger = { version = "^6.0.6", source = "likianta" }
# lk-utils = { version = ">=3.2.1b2,<3.3.0", source = "likianta", extras = ["exl"] }
lk-utils = { version = "^3.3.0a15", source = "likianta", extras = ["exl"] }
markdown2 = "^2.5.2"
markdownify = "^0.14.1"
# oss2 = "^2.19.1"
# pillow = "^10.4.0"
pinkrain = { version = "^0.0.0a29", source = "likianta" }
# pyperclip = "^1.9.0"
# qiniu = "^7.15.0"
# requests = "^2.32.3"
streamlit = "<1.46.0"
# streamlit-ace = "^0.1.1"
streamlit-canary = { version = "^0.1.0b10", source = "likianta" }
streamlit-code-editor = "^0.1.21"
# streamlit-shadcn-ui = "^0.1.17"
windows-toasts = { version = "^1.0.0", platform = "win32" }

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "likianta"
url = "http://47.102.108.149:2131/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-extensions]
ignore-unused-packages = ["ipython"]
