[tool.poetry]
name = "conflore"
version = "0.2.2a1"
description = "Load and save configurations in a simple way."
authors = ["likianta <likianta@foxmail.com>"]
license = "MIT"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = { version = "*", optional = true }

[tool.poetry.extras]
yml = ["pyyaml"]  # pip install conflore[yml]

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
