[tool.poetry]
name = "conflore"
version = "0.2.2b2"
description = "Load and save configurations in a simple way."
authors = ["Likianta <likianta@foxmail.com>"]
license = "MIT"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = { version = "^6.0.0", optional = true }

[tool.poetry.group.dev.dependencies]
pyyaml = "^6.0.2"

[tool.poetry.extras]
yml = ["pyyaml"]  # pip install conflore[yml]

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
