[tool.poetry]
name = "easy-submodule"
version = "0.3.2"
description = ""
authors = ["likianta <likianta@foxmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
# argsense = "^0.5.4"
argsense = { url = "http://likianta.pro:2006/argsense/argsense-0.5.5a0-py3-none-any.whl" }
lk-utils = "^2.7.2"
pyapp-window = { url = "http://likianta.pro:2006/pyapp-window/pyapp_window-0.2.1a0-py3-none-any.whl" }
streamlit = { version = "^1.28.0", python = "!=3.9.7" }
# streamlit-float = "*"
toml = "*"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

[tool.poetry.scripts]
easy-submodule = "easy_submodule.ui.launcher:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
