[tool.poetry]
name = "easy-submodule"
version = "0.3.5b4"
description = ""
authors = ["likianta <likianta@foxmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
# argsense = "^0.5.4"
argsense = { version = "^0.5.5a0", source = "likianta-hosted" }
lk-utils = "^2.7.2"
pyapp-window = { version = "^0.4.0", source = "likianta-hosted" }
streamlit = { version = "^1.28.0", python = "!=3.9.7" }
# streamlit-float = "*"
toml = "*"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

[[tool.poetry.source]]
name = "likianta-hosted"
url = "http://likianta.pro:2006/"
priority = "supplemental"

[tool.poetry.scripts]
easy-submodule = "easy_submodule.ui.launcher:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
