[tool.poetry]
name = "fake_typing"
version = "0.1.1"
authors = ["Likianta <likianta@foxmail.com>"]
description = ""

[tool.poetry.dependencies]
python = "^3.8"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "default"

[build-system]
requires = ["poetry"]
build-backend = "poetry.core.masonry.api"
