[tool.poetry]
name = "fake-typing"
version = "0.1.3"
authors = ["Likianta <likianta@foxmail.com>"]
description = ""

[tool.poetry.dependencies]
python = "^3.8"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"

[build-system]
requires = ["poetry"]
build-backend = "poetry.core.masonry.api"
