[tool.poetry]
name = "poetry-extensions"
version = "0.1.0"
description = ""
authors = ["likianta <likianta@foxmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
argsense = "^0.5.4"
lk-utils = { url = "http://likianta.pro:2006/lk-utils/lk_utils-2.7.2-py3-none-any.whl" }
toml = "*"

[tool.poetry.group.dev.dependencies]
poetry = "*"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
