[tool.poetry]
name = "pyapp-window"
version = "0.4.1a2"
description = ""
authors = ["likianta <likianta@foxmail.com>"]
# readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
argsense = "*"

# [tool.poetry.group.webview.dependencies]
# pywebview = { version = "*", platform = "win32" }
# toga = "^0.4.0"
toga = [
    { version = "^0.4.0", platform = "darwin" },
    { version = "^0.4.0", platform = "win32" },
]
# webui2 = "*"

# explicitly specify version for toga dependency on windows.
[tool.poetry.dependencies.pythonnet]  # <- toga (windows)
# [tool.poetry.group.webview.dependencies.pythonnet]  # <- toga (windows)
version = "^3.0.0"
python = ">=3.8,<3.13"
platform = "win32"
# optional = true

# [tool.poetry.extras]
# toga = ["toga", "pythonnet"]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
version = "0.1.0"
