[tool.poetry]
name = "pyapp-window"
version = "0.5.0a0"
description = ""
authors = ["likianta <likianta@foxmail.com>"]
# readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
argsense = "^0.5.6"

# pywebview = { version = "*", platform = "win32" }
# toga = "^0.4.0"
toga = [
    { version = "^0.4.0", platform = "darwin", optional = true },
    { version = "^0.4.0", platform = "win32", optional = true },
]
# webui2 = "*"

# explicitly specify version for toga dependency on windows.
[tool.poetry.dependencies.pythonnet]  # <- toga (windows)
version = "^3.0.0"
python = ">=3.8,<3.13"
platform = "win32"
optional = true

[tool.poetry.extras]
toga = ["toga", "pythonnet"]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
version = "0.1.0"
