[tool.poetry]
name = "pyapp-window"
version = "0.5.0a5"
description = ""
authors = ["likianta <likianta@foxmail.com>"]
# readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
argsense = "^0.5.6"
psutil = "*"
# pywebview = { version = "*", platform = "win32" }
# toga = "^0.4.0"
toga = [
    { version = "^0.4.0", platform = "darwin", python = ">=3.8,<3.13" },
    { version = "^0.4.0", platform = "win32", python = ">=3.8,<3.13" },
]
# webui2 = "*"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
version = "0.1.0"
