[tool.poetry]
name = "pyx"
description = ""
version = "0.1.0b11"
authors = ["Likianta <likianta@foxmail.com>"]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "default"

[tool.poetry.dependencies]
python = "^3.8"
argsense = "*"
lk-logger = "*"
lk-utils = "*"

[tool.poetry.scripts]
pyx = "pyx._bin:run"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
