[tool.poetry]
name = "pyexecutor"
description = ""
version = "0.1.0b14"
authors = ["Likianta <likianta@foxmail.com>"]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "default"

[tool.poetry.dependencies]
python = "^3.8"
argsense = "*"
lk-logger = "*"
lk-utils = { url = "http://likianta.pro:2006/lk-utils/lk_utils-2.7.0a7-py3-none-any.whl" }

[tool.poetry.scripts]
pyx = "pyexecutor._bin:run"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
