[tool.poetry]
name = "compatipy"
version = "0.3.0b0"
description = ""
authors = ["likianta <likianta@foxmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
argsense = "*"
astpretty = "*"
lk-logger = "*"
lk-utils = "*"
typing-extensions = { version = "*", python = "<3.10" }

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[build-system]
requires = ["poetry"]
build-backend = "poetry.core.masonry.api"
