[tool.poetry]
name = "compatipy"
version = "0.1.0a0"
description = ""
authors = ["Likianta <likianta@foxmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
argsense = { version = "^1.0.0a1", source = "likianta" }
astpretty = "^3.0.0"
# lk-logger = { version = "^6.0.6a1", source = "likianta" }
lk-utils = { version = "^3.3.0a12", source = "likianta" }
# typing-extensions = { version = "^4.14.0", python = "<3.10" }

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "likianta"
url = "http://47.102.108.149:2131/"
priority = "supplemental"

[build-system]
requires = ["poetry"]
build-backend = "poetry.core.masonry.api"
