[tool.poetry]
name = "streamlit-sugar"
version = "0.1.0"
description = ""
authors = ["likianta <likianta@foxmail.com>"]
# readme = "README.md"
packages = [{ include = "streamlit_sugar" }]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = { version = "^1.32.0", python = "!=3.9.7" }

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "likianta-hosted"
url = "http://likianta.pro:2006/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
