[tool.poetry]
name = "streamlit-sugar"
version = "0.2.0"
description = ""
authors = ["likianta <likianta@foxmail.com>"]
# readme = "README.md"
packages = [{ include = "streamlit_sugar" }]

[tool.poetry.dependencies]
python = "^3.8"
# argsense = "^0.5.0"
lk-utils = "^2.10.7"
streamlit = { version = "^1.37.0", python = "!=3.9.7" }

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "likianta-host"
url = "http://likianta.pro:2006/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
