[tool.poetry]
name = "timelapse"
version = "0.1.0b3"
description = ""
authors = ["likianta <likianta@foxmail.com>"]
# readme = "README.md"
packages = [{ include = "timelapse" }]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^13.7.0"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "default"

[[tool.poetry.source]]
name = "likianta-hosted"
url = "http://likianta.pro:2006/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
