[tool.poetry]
name = "watchpaths"
version = "0.1.0b0"
description = ""
authors = ["likianta <likianta@foxmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lk-utils = "*"
pysignal = { url = "http://likianta.pro:2006/pysignal/pysignal-0.1.0-py3-none-any.whl" }
watchdog = "*"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
